WWLib Copyright (c) 2006-2018

2018-04-26 v.2.35.0 Walery Wysotsky <dev@wysotsky.info>
* Additional map builder

2018-02-10 v.2.34.1 Walery Wysotsky <dev@wysotsky.info>
* Fix JSONSaver multiple files load

2018-02-06 v.2.34.0 Walery Wysotsky <dev@wysotsky.info>
* Add HTTPMethod enum

2017-10-15 v.2.33.0 Walery Wysotsky <dev@wysotsky.info>
* "Reflect" refactoring

2017-05-11 v.2.32.0 Walery Wysotsky <dev@wysotsky.info>
* Add toString to DB objects

2017-03-04 v.2.31.0 Walery Wysotsky <dev@wysotsky.info>
* Add db.Database class
* Remove db.converters package

2017-01-08 v.2.30.0 Walery Wysotsky <dev@wysotsky.info>
* Version: logging back to slf4j

2016-12-08 v.2.29.1 Walery Wysotsky <dev@wysotsky.info>
* HTTP: Fix proxy authenification - use basic
* TCP: Remove system proxy settings

2016-12-07 v.2.29.0 Walery Wysotsky <dev@wysotsky.info>
* HTTP: Use local proxy settings for request instead of system

2016-09-23 v.2.28.1 Walery Wysotsky <dev@wysotsky.info>
* Fix HTTP: don't use encoding as charset

2016-09-07 v.2.28.0 Walery Wysotsky <dev@wysotsky.info>
* Converter: add toDate method
* Version: return built date as Date

2016-08-02 v.2.27.0 Walery Wysotsky <dev@wysotsky.info>
* HTTP: get charset from response header
* HTTP: save last response charset 
* HTTP: trace response header fields

2016-07-13 v.2.26.0 Walery Wysotsky <dev@wysotsky.info>
* Add HTTPS debugging messages
* Add CommonUtils.certificateToString

2016-05-01 v.2.25.0 Walery Wysotsky <dev@wysotsky.info>
* Load specification (API) version from manifest.mf
* Optimize Reflect

2016-04-07 v.2.24.0 Walery Wysotsky <dev@wysotsky.info>
* Add ability to set object indenter for JSONSaver.save
* Add ability to use additional parse features in JSONSaver.load

2016-03-29 v.2.23.0 Walery Wysotsky <dev@wysotsky.info>
* Add multiline searizator/deserializator to JSONSaver

2016-03-21 v.2.22.0 Walery Wysotsky <dev@wysotsky.info>