@@ -1,0 +1,7 @@
+package org.wwlib.function;
+
+@FunctionalInterface
+public interface TriFunction<T,U,V,R> {
+
+  R apply(T t, U u, V v);
+}
